<?xml version="1.0"?>
<package>
  <name>nxt_lisp</name>
  <version>0.0.0</version>
  <description>NXT Lisp Tutorial Project</description>

  <maintainer email="jannikbu@cs.uni-bremen.de">Jannik Buckelo</maintainer>
  <maintainer email="stelter@cs.uni-bremen.de">Simon Stelter</maintainer>

  <license>BSD</license>
  <author email="jannikbu@cs.uni-bremen.de">Jannik Buckelo</author>
  <author email="stelter@cs.uni-bremen.de">Simon Stelter</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>nxt_msgs</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>roslisp_utilities</build_depend>
  
  <run_depend>nxt_msgs</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>roslisp_utilities</run_depend>
</package>
